Did the big text below showcase, and make everything above responsive and to specs.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div id = "widget_hide" class="nav__widget nav__widget_hidden">X</div>
     </nav>   
     <span id="beginning"></span>
-    <header class="motto limited_width">
-        <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidunt ut labore</p></div>
+    <header class="motto">
+        <div class="limited_width"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidunt ut labore</p></div>
     </header>
     <main class="full_width">
         <div class="intro limited_width">
@@ -57,7 +57,9 @@
                 <div class="showcase__details">Lorem ipsum</div>
             </div>
         </div>
-        <div class="limited_width">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eum facilis, placeat ex eaque aliquid doloribus porro, fuga itaque quasi.</div>
+        <div class="limited_width">
+            <p class="big_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eum facilis, placeat ex eaque aliquid doloribus porro, fuga.</p>
+        </div>
         <div id="about">
             <div>
                 <img src="img/close-up-of-blue-buttons.png" alt="blue buttons">
