Did the example div with the blue buttons.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
         <ul class="navbar__links limited_width">
             <li class="navbar__option"><a href="#portfolio">Portfolio</a></li>
             <li class="navbar__option"><a href="#about">About</a></li>
-            <li class="navbar__option navbar__logo"><a href="#beginning">Moonspeak</a></li>
+            <li class="navbar__option navbar__logo"><a href="#top">Moonspeak</a></li>
             <li class="navbar__option"><a href="#articles">Articles</a></li>
             <li class="navbar__option"><a href="#contact">Contact</a></li>
         </ul>
         <div id = "widget_show" class="nav__widget nav__widget_hidden"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
         <div id = "widget_hide" class="nav__widget nav__widget_hidden">X</div>
-    </nav>   
-    <span id="beginning"></span>
-    <header class="motto">
+    </nav>
+    <header id="top" class="motto">
         <div class="limited_width"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidunt ut labore</p></div>
     </header>
     <main class="full_width">
@@ -60,22 +59,22 @@
         <div class="limited_width">
             <p class="big_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eum facilis, placeat ex eaque aliquid doloribus porro, fuga.</p>
         </div>
-        <div id="about">
-            <div>
-                <img src="img/close-up-of-blue-buttons.png" alt="blue buttons">
-            </div>    
-            <div>
-                <div>
-                    <h2>Moonspeak</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem provident facere obcaecati, quae ex beatae expedita amet illo accusantium.</p>
+        <div id="about" class="example">
+            <div class="example__picture">
+                <img class="example__picture" src="img/close-up-of-blue-buttons.png" alt="blue buttons">
+            </div>
+            <div class="example__bulletpoints">
+                <div class="bulletpoint">
+                    <h2 class="bulletpoint__header">Moonspeak</h2>
+                    <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem provident facere obcaecati, quae ex beatae expedita amet illo accusantium.</p>
                 </div>
-                <div>
-                    <h2>Moonspeak</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero minus voluptate dolor eius harum iure aliquid iste facere voluptatibus!</p>
+                <div class="bulletpoint">
+                    <h2 class="bulletpoint__header">Moonspeak</h2>
+                    <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero minus voluptate dolor eius harum iure aliquid iste facere voluptatibus!</p>
                 </div>
-                <div>
-                    <h2>Moonspeak</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio odit blanditiis, dolore quod maxime. Odio placeat eaque accusantium vero.</p>
+                <div class="bulletpoint">
+                    <h2 class="bulletpoint__header">Moonspeak</h2>
+                    <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio odit blanditiis, dolore quod maxime. Odio placeat eaque accusantium vero.</p>
                 </div>
             </div>
         </div>
