Did the articles.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div id="about" class="example">
             <div class="example__picture">
-                <img class="example__picture" src="img/close-up-of-blue-buttons.png" alt="blue buttons">
+                <img src="img/close-up-of-blue-buttons.png" alt="blue buttons" width="500">
             </div>
             <div class="example__bulletpoints">
                 <div class="bulletpoint">
@@ -78,21 +78,21 @@
                 </div>
             </div>
         </div>
-        <div id="articles" class="limited_width">
+        <div id="articles" class="articles limited_width">
             <div class="article">
-                <h2>Excepteur sint occaecat cupidatat non proident.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor harum veniam ipsa corporis quos voluptas et temporibus at! Placeat repellendus culpa atque similique doloremque quasi quo nulla animi fuga, nostrum earum aut dolore, temporibus ipsum esse fugiat adipisci perferendis nemo recusandae facilis architecto alias error? Placeat dicta laboriosam excepturi praesentium mollitia, cupiditate.</p>
-                <a href="#">Learn more</a>
+                <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
+                <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor harum veniam ipsa corporis quos voluptas et temporibus at! Placeat repellendus culpa atque similique doloremque quasi quo nulla animi fuga, nostrum earum aut dolore, temporibus ipsum esse fugiat adipisci perferendis nemo recusandae facilis architecto alias error? Placeat dicta laboriosam excepturi praesentium mollitia, cupiditate.</p>
+                <a href="#" class="article__link">Learn more</a>
             </div>
             <div class="article">
-                <h2>Excepteur sint occaecat cupidatat non proident.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi doloribus tenetur vero nostrum praesentium illum ipsum vel quidem, necessitatibus! Commodi, quasi. Facilis itaque impedit corporis reprehenderit dolor harum necessitatibus ratione nesciunt, qui vero placeat odit modi pariatur sit aperiam at distinctio aut, blanditiis molestiae ullam eaque. Assumenda dolore totam aperiam dignissimos.</p>
-                <a href="#">Learn more</a>
+                <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
+                <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi doloribus tenetur vero nostrum praesentium illum ipsum vel quidem, necessitatibus! Commodi, quasi. Facilis itaque impedit corporis reprehenderit dolor harum necessitatibus ratione nesciunt, qui vero placeat odit modi pariatur sit aperiam at distinctio aut, blanditiis molestiae ullam eaque. Assumenda dolore totam aperiam dignissimos.</p>
+                <a href="#" class="article__link">Learn more</a>
             </div>
             <div class="article">
-                <h2>Excepteur sint occaecat cupidatat non proident.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima ducimus possimus, atque, velit quas nobis saepe. Earum nisi suscipit dolores molestiae quasi similique minima tempora eum quidem sit. Rem veniam, dolorem maiores aperiam sit, asperiores quidem fugiat quo error temporibus ut hic dolor laborum minus nemo ducimus dolores, minima nesciunt atque quasi!</p>
-                <a href="#">Learn more</a>
+                <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
+                <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima ducimus possimus, atque, velit quas nobis saepe. Earum nisi suscipit dolores molestiae quasi similique minima tempora eum quidem sit. Rem veniam, dolorem maiores aperiam sit, asperiores quidem fugiat quo error temporibus ut hic dolor laborum minus nemo ducimus dolores, minima nesciunt atque quasi!</p>
+                <a href="#" class="article__link">Learn more</a>
             </div>
         </div>
     </main>       
