--- a/index.html
+++ b/index.html
@@ -95,28 +95,28 @@
                 <a href="#" class="article__link">Learn more</a>
             </div>
         </div>
-    </main>       
-    <div id="contact" class="limited_width">
-        <div>
-            <div>
+    </main>
+    <div id="contact" class="address">
+        <div class="limited_width">
+            <address class="address__text">
             <p>There are many variations of passages of Lorem Ipsum available,
                 but the majority have suffered alteration in some form,
                 by injected humour, or randomised words, which don't look even slightly believable.</p>
-            <div>Phone number</div>
+            <h2 class="address__header">Phone number</h2>
             <p>+40 770 123 456</p>
-            <div>Email</div>
-            <p><a href="mailto:almaz@bisenbaev.com">almaz@bisenbaev.com</a></p>
-            </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2139.7281346903055!2d-73.9539775745961!3d40.67325180088926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b694bdad9a1%3A0x8c11f2241e7cc7!2sRogers+Ave%2C+Brooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2spl!4v1491909831778" frameborder="0" style="border:0" allowfullscreen></iframe>           
+            <h2 class="address__header">Email</h2>
+            <p><a href="mailto:almaz@bisenbaev.com" class="address__email">almaz@bisenbaev.com</a></p>
+            </address>
+            <iframe class="address__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2139.7281346903055!2d-73.9539775745961!3d40.67325180088926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b694bdad9a1%3A0x8c11f2241e7cc7!2sRogers+Ave%2C+Brooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2spl!4v1491909831778" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-    <footer>
-        <ul>
-            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-            <li class="copyright">Copyright 2017</li>
+    <footer class="limited_width">
+        <ul class="footer">
+            <li class="footer__item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+            <li class="footer__item"><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li class="footer__item"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li class="footer__item"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+            <li class="footer__item copyright">Copyright 2017</li>
         </ul>
     </footer>
 </body>
