Cleaned everything up a little, rewrote the script without jQuery.

--- a/index.html
+++ b/index.html
@@ -1,125 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Weekly WebDev Challenge #30</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300|Roboto:100,300,500,700" rel="stylesheet">
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <nav class="navbar">
-        <ul class="navbar__links limited_width">
-            <li class="navbar__option"><a href="#portfolio">Portfolio</a></li>
-            <li class="navbar__option"><a href="#about">About</a></li>
-            <li class="navbar__option navbar__logo"><a href="#top">Moonspeak</a></li>
-            <li class="navbar__option"><a href="#articles">Articles</a></li>
-            <li class="navbar__option"><a href="#contact">Contact</a></li>
-        </ul>
-        <div id = "widget_show" class="nav__widget nav__widget_hidden"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
-        <div id = "widget_hide" class="nav__widget nav__widget_hidden">X</div>
-    </nav>
-    <header id="top" class="motto">
-        <div class="limited_width"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidunt ut labore</p></div>
-    </header>
-    <main class="full_width">
-        <div class="intro limited_width">
-            <h1>Aarhus Lejerboliger</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Deserunt, nesciunt. Ullam aliquid fugit sit assumenda molestias iste fugiat ipsam dolorum accusantium architecto? Officia cum soluta quasi harum quis, tempora ex ab, natus, quo nostrum sint eum quisquam! Laborum, atque consequuntur nesciunt, neque odit quas perspiciatis? Aperiam, illum eius! Eligendi, perspiciatis?
-            </p>
-            <a href="#">View project</a>
-        </div>
-        <div id="portfolio" class="showcase">
-            <div class="showcase__tile">
-                <img src="img/1.png" alt="Digital SLR camera" />
-                <div class="showcase__details">Lorem ipsum</div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <title>Weekly WebDev Challenge #30</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300|Roboto:100,300,400,600" rel="stylesheet">
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <nav class="navbar">
+            <ul class="navbar__links limited_width">
+                <li class="navbar__option"><a href="#portfolio">Portfolio</a></li>
+                <li class="navbar__option"><a href="#about">About</a></li>
+                <li class="navbar__option navbar__logo"><a href="#top">Moonspeak</a></li>
+                <li class="navbar__option"><a href="#articles">Articles</a></li>
+                <li class="navbar__option"><a href="#contact">Contact</a></li>
+            </ul>
+            <div id = "widget_show" class="nav__widget nav__widget_hidden"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+            <div id = "widget_hide" class="nav__widget nav__widget_hidden">X</div>
+        </nav>
+        <header id="top" class="motto">
+            <div class="limited_width"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidunt ut labore</p></div>
+        </header>
+        <main class="full_width">
+            <div class="intro limited_width">
+                <h1 class="intro__header">Aarhus Lejerboliger</h1>
+                <p class="intro__body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Deserunt, nesciunt. Ullam aliquid fugit sit assumenda molestias iste fugiat ipsam dolorum accusantium architecto? Officia cum soluta quasi harum quis, tempora ex ab, natus, quo nostrum sint eum quisquam! Laborum, atque consequuntur nesciunt, neque odit quas perspiciatis? Aperiam, illum eius! Eligendi, perspiciatis?
+                </p>
+                <a class="intro__link" href="#">View project</a>
             </div>
-            <div class="showcase__tile">
-                <img src="img/2.png" alt="Woman holding a book titled Kinfolk" />
-                <div class="showcase__details">Lorem ipsum</div>
-            </div>
-            <div class="showcase__tile">
-                <img src="img/3.png" alt="Violin player" />
-                <div class="showcase__details">Lorem ipsum</div>
-            </div>
-            <div class="showcase__tile">
-                <img src="img/4.png" alt="Smartwatch" />
-                <div class="showcase__details">Lorem ipsum</div>
-            </div>
-            <div class="showcase__tile">
-                <img src="img/5.png" alt="Woman using a laptop" />
-                <div class="showcase__details">Lorem ipsum</div>
-            </div>
-            <div class="showcase__tile">
-                <img src="img/6.png" alt="iMac computer" />
-                <div class="showcase__details">Lorem ipsum</div>
-            </div>
-        </div>
-        <div class="limited_width">
-            <p class="big_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eum facilis, placeat ex eaque aliquid doloribus porro, fuga.</p>
-        </div>
-        <div id="about" class="example">
-            <div class="example__picture">
-                <img src="img/close-up-of-blue-buttons.png" alt="blue buttons" width="500">
-            </div>
-            <div class="example__bulletpoints">
-                <div class="bulletpoint">
-                    <h2 class="bulletpoint__header">Moonspeak</h2>
-                    <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem provident facere obcaecati, quae ex beatae expedita amet illo accusantium.</p>
+            <div id="portfolio" class="showcase">
+                <div class="showcase__tile">
+                    <img src="img/1.png" alt="Digital SLR camera" />
+                    <div class="showcase__details">Lorem ipsum</div>
                 </div>
-                <div class="bulletpoint">
-                    <h2 class="bulletpoint__header">Moonspeak</h2>
-                    <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero minus voluptate dolor eius harum iure aliquid iste facere voluptatibus!</p>
+                <div class="showcase__tile">
+                    <img src="img/2.png" alt="Woman holding a book titled Kinfolk" />
+                    <div class="showcase__details">Lorem ipsum</div>
                 </div>
-                <div class="bulletpoint">
-                    <h2 class="bulletpoint__header">Moonspeak</h2>
-                    <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio odit blanditiis, dolore quod maxime. Odio placeat eaque accusantium vero.</p>
+                <div class="showcase__tile">
+                    <img src="img/3.png" alt="Violin player" />
+                    <div class="showcase__details">Lorem ipsum</div>
+                </div>
+                <div class="showcase__tile">
+                    <img src="img/4.png" alt="Smartwatch" />
+                    <div class="showcase__details">Lorem ipsum</div>
+                </div>
+                <div class="showcase__tile">
+                    <img src="img/5.png" alt="Woman using a laptop" />
+                    <div class="showcase__details">Lorem ipsum</div>
+                </div>
+                <div class="showcase__tile">
+                    <img src="img/6.png" alt="iMac computer" />
+                    <div class="showcase__details">Lorem ipsum</div>
                 </div>
             </div>
-        </div>
-        <div id="articles" class="articles limited_width">
-            <div class="article">
-                <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
-                <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor harum veniam ipsa corporis quos voluptas et temporibus at! Placeat repellendus culpa atque similique doloremque quasi quo nulla animi fuga, nostrum earum aut dolore, temporibus ipsum esse fugiat adipisci perferendis nemo recusandae facilis architecto alias error? Placeat dicta laboriosam excepturi praesentium mollitia, cupiditate.</p>
-                <a href="#" class="article__link">Learn more</a>
+            <div class="limited_width">
+                <p class="big_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eum facilis, placeat ex eaque aliquid doloribus porro, fuga.</p>
             </div>
-            <div class="article">
-                <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
-                <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi doloribus tenetur vero nostrum praesentium illum ipsum vel quidem, necessitatibus! Commodi, quasi. Facilis itaque impedit corporis reprehenderit dolor harum necessitatibus ratione nesciunt, qui vero placeat odit modi pariatur sit aperiam at distinctio aut, blanditiis molestiae ullam eaque. Assumenda dolore totam aperiam dignissimos.</p>
-                <a href="#" class="article__link">Learn more</a>
+            <div id="about" class="example">
+                <div class="example__picture">
+                    <img src="img/close-up-of-blue-buttons.png" alt="blue buttons" width="500">
+                </div>
+                <div class="example__bulletpoints">
+                    <div class="bulletpoint">
+                        <h2 class="bulletpoint__header">Moonspeak</h2>
+                        <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem provident facere obcaecati, quae ex beatae expedita amet illo accusantium.</p>
+                    </div>
+                    <div class="bulletpoint">
+                        <h2 class="bulletpoint__header">Moonspeak</h2>
+                        <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero minus voluptate dolor eius harum iure aliquid iste facere voluptatibus!</p>
+                    </div>
+                    <div class="bulletpoint">
+                        <h2 class="bulletpoint__header">Moonspeak</h2>
+                        <p class="bulletpoint__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio odit blanditiis, dolore quod maxime. Odio placeat eaque accusantium vero.</p>
+                    </div>
+                </div>
             </div>
-            <div class="article">
-                <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
-                <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima ducimus possimus, atque, velit quas nobis saepe. Earum nisi suscipit dolores molestiae quasi similique minima tempora eum quidem sit. Rem veniam, dolorem maiores aperiam sit, asperiores quidem fugiat quo error temporibus ut hic dolor laborum minus nemo ducimus dolores, minima nesciunt atque quasi!</p>
-                <a href="#" class="article__link">Learn more</a>
+            <div id="articles" class="articles limited_width">
+                <div class="article">
+                    <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
+                    <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor harum veniam ipsa corporis quos voluptas et temporibus at! Placeat repellendus culpa atque similique doloremque quasi quo nulla animi fuga, nostrum earum aut dolore, temporibus ipsum esse fugiat adipisci perferendis nemo recusandae facilis architecto alias error? Placeat dicta laboriosam excepturi praesentium mollitia, cupiditate.</p>
+                    <a href="#" class="article__link">Learn more</a>
+                </div>
+                <div class="article">
+                    <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
+                    <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga modi doloribus tenetur vero nostrum praesentium illum ipsum vel quidem, necessitatibus! Commodi, quasi. Facilis itaque impedit corporis reprehenderit dolor harum necessitatibus ratione nesciunt, qui vero placeat odit modi pariatur sit aperiam at distinctio aut, blanditiis molestiae ullam eaque. Assumenda dolore totam aperiam dignissimos.</p>
+                    <a href="#" class="article__link">Learn more</a>
+                </div>
+                <div class="article">
+                    <h2 class="article__header">Excepteur sint occaecat cupidatat non proident.</h2>
+                    <p class="article__body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima ducimus possimus, atque, velit quas nobis saepe. Earum nisi suscipit dolores molestiae quasi similique minima tempora eum quidem sit. Rem veniam, dolorem maiores aperiam sit, asperiores quidem fugiat quo error temporibus ut hic dolor laborum minus nemo ducimus dolores, minima nesciunt atque quasi!</p>
+                    <a href="#" class="article__link">Learn more</a>
+                </div>
+            </div>
+        </main>
+        <div id="contact" class="address">
+            <div class="limited_width address__flexbox">
+                <address class="address__text">
+                <p>There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form,
+                    by injected humour, or randomised words, which don't look even slightly believable.</p>
+                <h2 class="address__header">Phone number</h2>
+                <p>+40 770 123 456</p>
+                <h2 class="address__header">Email</h2>
+                <p><a href="mailto:almaz@bisenbaev.com" class="address__email">almaz@bisenbaev.com</a></p>
+                </address>
+                <iframe class="address__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2139.7281346903055!2d-73.9539775745961!3d40.67325180088926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b694bdad9a1%3A0x8c11f2241e7cc7!2sRogers+Ave%2C+Brooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2spl!4v1491909831778" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
-    </main>
-    <div id="contact" class="address">
-        <div class="limited_width">
-            <address class="address__text">
-            <p>There are many variations of passages of Lorem Ipsum available,
-                but the majority have suffered alteration in some form,
-                by injected humour, or randomised words, which don't look even slightly believable.</p>
-            <h2 class="address__header">Phone number</h2>
-            <p>+40 770 123 456</p>
-            <h2 class="address__header">Email</h2>
-            <p><a href="mailto:almaz@bisenbaev.com" class="address__email">almaz@bisenbaev.com</a></p>
-            </address>
-            <iframe class="address__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2139.7281346903055!2d-73.9539775745961!3d40.67325180088926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b694bdad9a1%3A0x8c11f2241e7cc7!2sRogers+Ave%2C+Brooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2spl!4v1491909831778" frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
-    <footer class="limited_width">
-        <ul class="footer">
-            <li class="footer__item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-            <li class="footer__item"><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-            <li class="footer__item"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-            <li class="footer__item"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-            <li class="footer__item copyright">Copyright 2017</li>
-        </ul>
-    </footer>
-</body>
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-<script src="js/script.js"></script>
+        <footer class="limited_width">
+            <ul class="footer">
+                <li class="footer__item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li class="footer__item"><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                <li class="footer__item"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li class="footer__item"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                <li class="footer__item copyright">Copyright 2017</li>
+            </ul>
+        </footer>
+    </body>
+    <script src="js/script.js"></script>
 </html>
