Prefixed and minified.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Weekly WebDev Challenge #30</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300|Roboto:100,300,400,600" rel="stylesheet">
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-min.css">
     </head>
     <body>
         <nav class="navbar">
